feat: add counter functionality

--- a/source/index.html
+++ b/source/index.html
@@ -279,7 +279,7 @@
       <div class="footer__container">
       </div>
     </footer>
-    <!-- <script src="https://api-maps.yandex.ru/2.1/?apikey=f4064449-aed6-4597-84cc-a7cd5c3d5651&lang=ru_RU" type="text/javascript"> </script> -->
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=f4064449-aed6-4597-84cc-a7cd5c3d5651&lang=ru_RU" type="text/javascript"> </script>
     <script src="js/index.js" type="module"></script>
   </body>
 </html>
